# AI-Resume-Screening-System

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TRD_AI_Hiring_Copilot.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/scripts/: seed.py
apps/api/src/: config.py  main.py
apps/api/src/domain/entities/: candidate.py  job.py  user.py
apps/api/src/domain/repositories/: candidate_repository.py  job_repository.py  user_repository.py
apps/api/src/infrastructure/ai/: openai_client.py  resume_parser.py
apps/api/src/infrastructure/ai/prompts/: candidate_score.txt  question_generate.txt  resume_parse.txt  summary_generate.txt
apps/api/src/infrastructure/cache/: redis_client.py
apps/api/src/infrastructure/database/: session.py
apps/api/src/infrastructure/database/models/: __init__.py  candidate.py  job.py  user.py
apps/api/src/infrastructure/database/repositories/: candidate_repository_impl.py  job_repository_impl.py  user_repository_impl.py
apps/api/src/infrastructure/queue/: sqs_client.py
apps/api/src/infrastructure/storage/: s3_client.py
apps/api/src/infrastructure/vector_db/: pinecone_client.py
apps/api/src/presentation/: dependencies.py
apps/api/src/presentation/api/v1/: __init__.py  ai.py  auth.py  candidates.py  chat.py  health.py  jobs.py  resumes.py  search.py
apps/api/src/presentation/middleware/: logging_middleware.py
apps/api/src/presentation/schemas/: auth.py  candidate.py  common.py  job.py
apps/api/src/worker/: resume_processor.py
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/components/upload/: ResumeUploadZone.tsx
apps/web/src/lib/: api.ts  query-client.ts  query-keys.ts  utils.ts
apps/web/src/stores/: auth.store.ts  candidate.store.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: index.ts
memory/: MEMORY.md
(+8 files in other folders)
